FIX: Set overflow-x to auto to prevent scroll bar from always showing

--- a/app/assets/stylesheets/common/admin/dashboard.scss
+++ b/app/assets/stylesheets/common/admin/dashboard.scss
@@ -21,7 +21,7 @@
     font-size: var(--font-up-1);
     white-space: nowrap;
     flex-wrap: nowrap;
-    overflow-x: scroll;
+    overflow-x: auto;
 
     // Fade-out for horizontal scroll nav
     &:before {
